# django_gdparchis

./: .gitignore  README.md  django_gdparchis.epj  manage.py  pyproject.toml  update_reusing.py
django_gdparchis/: asgi.py  settings.py  urls.py  wsgi.py
gdparchis/: __init__.py  apps.py  dictstate.py  middleware.py  models.py  poethepoet.py  routes4.py  serializers.py  squares4.py  tests.py  views.py
gdparchis/migrations/: 0001_initial.py  0002_games_faked_installation_so.py  0002_rename_game_gamestatistic_and_more.py  0003_game_state.py  0004_game_datetime_game_max_players_game_uuid.py  0005_alter_gamestatistic_uuid.py  0006_alter_game_datetime_alter_game_uuid.py
